--- a/stack.yml
+++ b/stack.yml
@@ -2,12 +2,13 @@ version: 1.0
 provider:
   name: openfaas
   gateway: http://127.0.0.1:8080
+
 functions:
   status-echo:
     lang: golang-middleware
     handler: ./status-echo
-    image: ghcr.io/lucasroesler/status-echo:latest
+    image: ghcr.io/${OWNER:-:lucasroesler}/status-echo:${TAG:-:latest}
   echo:
     lang: golang-http
     handler: ./echo
-    image: ghcr.io/lucasroesler/echo:latest
+    image: ghcr.io/${OWNER:-:lucasroesler}/echo:${TAG:-:latest}
