--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,6 +18,12 @@ jobs:
         uses: golangci/golangci-lint-action@v2
         with:
           version: v1.31
+          working-directory: echo
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v2
+        with:
+          version: v1.31
+          working-directory: status-echo
   build:
     runs-on: ubuntu-latest
     steps:
@@ -44,12 +50,12 @@ jobs:
         run: >
           echo ::set-output name=repo_owner::$(echo ${{ github.repository_owner }} |
           tr '[:upper:]' '[:lower:]')
-      - name: Docker Login
-        run: >
-          echo ${{secrets.DOCKER_PASSWORD}} |
-          docker login ghcr.io --username
-          ${{ steps.get_repo_owner.outputs.repo_owner }}
-          --password-stdin
+      - name: Login to Docker Registry
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
       - name: Publish functions
         run: >
           OWNER="${{ steps.get_repo_owner.outputs.repo_owner }}"
