--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -53,7 +53,7 @@ jobs:
       - name: Login to Docker Registry
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
+          username: ${{ steps.get_repo_owner.outputs.repo_owner }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           registry: ghcr.io
       - name: Publish functions
