--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,7 +44,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
       - name: Get TAG
         id: get_tag
-        run: echo ::set-output name=tag::$(git-semver)
+        run: echo ::set-output name=tag::"$(git-semver)"
       - name: Get Repo Owner
         id: get_repo_owner
         run: >
@@ -61,5 +61,5 @@ jobs:
           OWNER="${{ steps.get_repo_owner.outputs.repo_owner }}"
           TAG="${{ steps.get_tag.outputs.tag }}"
           faas-cli publish
-          --build-label org.opencontainers.image.source https://github.com/${{ github.repository }}
+          --build-label org.opencontainers.image.source=https://github.com/${{ github.repository }}
           --platforms linux/amd64,linux/arm/v7,linux/arm64
