--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,6 +28,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+        with:
+          fetch-depth: 0
       - name: Get faas-cli
         run: curl -sLSf https://cli.openfaas.com | sudo sh
       - name: Set up Go
@@ -42,7 +44,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
       - name: Get TAG
         id: get_tag
-        run: echo ::set-output name=tag::"$(git describe --tags --always)"
+        run: echo ::set-output name=tag::"$(git-semver)"
       - name: Get Repo Owner
         id: get_repo_owner
         run: >
@@ -53,6 +55,7 @@ jobs:
           echo "repo_owner: ${{ steps.get_repo_owner.outputs.repo_owner }}"
           echo "tag: ${{ steps.get_tag.outputs.tag }}"
           echo "repo: ${{ github.repository }}"
+          echo "git-describe: $(git describe --tags --always)"
           echo "go: $(go env)"
       - name: Login to Docker Registry
         uses: docker/login-action@v1
