--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
         with:
-          fetch-depth: 1
+          fetch-depth: 0
       - name: Get faas-cli
         run: curl -sLSf https://cli.openfaas.com | sudo sh
       - name: Set up Go
@@ -27,7 +27,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
       - name: Get TAG
         id: get_tag
-        run: echo ::set-output name=tag::$(git describe --tags --always)
+        run: echo ::set-output name=tag::$(git-semver)
       - name: Get Repo Owner
         id: get_repo_owner
         run: >
