--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,7 +44,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
       - name: Get TAG
         id: get_tag
-        run: echo ::set-output name=tag::"$(git-semver)"
+        run: echo ::set-output name=tag::$(git-semver | tr '+' '.')
       - name: Get Repo Owner
         id: get_repo_owner
         run: >
