Add nats debugging functions
Signed-off-by: Lucas Roesler <roesler.lucas@gmail.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,6 +24,16 @@ jobs:
         with:
           version: v1.31
           working-directory: status-echo
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v2
+        with:
+          version: v1.31
+          working-directory: nats-publisher
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v2
+        with:
+          version: v1.31
+          working-directory: nats-receiver
   build:
     runs-on: ubuntu-latest
     steps:
