--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -78,5 +78,6 @@ jobs:
           OWNER="${{ steps.get_repo_owner.outputs.repo_owner }}"
           TAG="${{ steps.get_tag.outputs.tag }}"
           faas-cli publish
+          --build-arg GO111MODULE=on
           --build-label org.opencontainers.image.source=https://github.com/${{ github.repository }}
           --platforms linux/amd64,linux/arm/v7,linux/arm64
