feat: Add alpine and debian based dig functions
**What**
- Add functions that invoke `dig`. This can be used to debug DNS
  resolution in a cluster. E.g. service discovery inside a kuberenets
  cluster or faasd. A Debian and an Alpine implementation are provided
  because there are cases where these images behave just slightly
  differently
Signed-off-by: Lucas Roesler <roesler.lucas@gmail.com>

--- a/stack.yml
+++ b/stack.yml
@@ -18,6 +18,14 @@ functions:
     lang: golang-middleware
     handler: ./echo
     image: ghcr.io/${OWNER:-lucasroesler}/echo:${TAG:-latest}
+  dig-alpine:
+    lang: dockerfile
+    handler: ./dig-alpine
+    image: ghcr.io/${OWNER:-lucasroesler}/dig-alpine:${TAG:-latest}
+  dig-debian:
+    lang: dockerfile
+    handler: ./dig-debian
+    image: ghcr.io/${OWNER:-lucasroesler}/dig-debian:${TAG:-latest}
   nats-publisher:
     lang: golang-middleware
     handler: ./nats-publisher
